[package]
name = "nodemap"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "Cross-platform network mapper"
repository = "https://github.com/shellrow/nodemap"
readme = "README.md"
keywords = ["network","security","scan","cli","cross-platform"]
categories = ["network-programming"]
license = "MIT"

[[bin]]
name = "nodemap"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
default-net = "0.11.0"
netscan = { version = "0.12.0", default-features = false }
clap = { version = "3.1", features = ["cargo"] }
console = "0.15.0"
indicatif = "0.16.2"
term-table = "1.3"
async-io = "1.6"
chrono = "0.4"
regex = "1.6.0"
dns-lookup = "1.0"
nodemap-core = { path = "../nodemap-core", version = "0.1.0", default-features = false}
